Uploading updated CST website

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>CST Home Page</title>
     <link rel="stylesheet" href="style.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
   <body>
     <div class="header">
@@ -21,18 +22,19 @@
             <li><a href="#">ADMISSION</a></li>
             <li><a href="#">RESEARCH</a></li>
             <li><a href="#">OTHERS</a></li>
+            <li>
+              <div class="search">
+                <input
+                  class="srch"
+                  type="search"
+                  name=""
+                  placeholder="Type to search"
+                />
+                <a href="#"><button class="btn">Search</button></a>
+              </div>
+            </li>
           </ul>
         </div>
-        <div class="search">
-          <input
-            class="srch"
-            type="search"
-            name=""
-            placeholder="Type to search"
-          />
-          <a href="#"><button class="btn">Search</button></a>
-        </div>
-        <div class="content"></div>
       </div>
       <div class="headline">
         <h2>" In pursuit of preparing tomorrow's technologist :) "</h2>
@@ -47,8 +49,8 @@
           Architecture. Additionally, the College offers capacity-building
           programs for the in-service personnel holding Diploma in Civil,
           Electrical, Electronics & Communication and Information Technology.
-          These programmes take into account prior learning and thereby the
-          duration of the programme is reduced by a year. The programmes are
+          These programmes take into account prior learning and thereby
+          theduration of the programme is reduced by a year. The programmes are
           managed through five academic departments in the College, Civil
           Engineering Department, Electrical Engineering Department, Electronics
           & Communication Department, Information Technology Department, Science
@@ -125,12 +127,78 @@
       </div>
     </div>
 
-    <div class="footer">
-      <p>
-        College of Science and Technology, <br />Rinchending, Phuentsholing,<br />Chukkha:
-        Bhutan, <br />Post-Box No: 450 <br />Postal Code: 21101 <br />Email:
-        info.cst@rub.edu.bt <br />Web Manager: ictunit.cst@rub.edu.bt
-      </p>
-    </div>
+    <footer class="footer">
+      <div class="footer-section">
+        <h3>Archives</h3>
+        <pre>
+          January, 2025
+          December, 2024
+          November, 2024
+          October, 2024
+        </pre>
+      </div>
+
+      <div class="footer-section">
+        <h3>Links</h3>
+        <pre>
+          Office of the Vice Chancellor
+          Sister Colleges
+          Ministry of Education
+          G2C Services
+          Ministry of Industry,
+           Commerce & Employment
+          Royal Civil Service Commission
+          FAQ
+        </pre>
+      </div>
+
+      <div class="footer-section">
+        <h3>Online-Journals</h3>
+        <pre>
+          Ebsco
+          Building Green
+          Open Access Library
+          Open Access Journals (DOAJ)
+          JSTOR
+          Research4life
+          Taylor & Francis Online
+          ASCE- Journal of Construction 
+          Engineering and Management
+          NICMAR Journal
+          MDPI journals
+          European Journal of Energy Research
+          Hindawi
+          Journal of Renewable Energy 
+          and Environment
+        </pre>
+      </div>
+
+      <div class="footer-section">
+        <h3>E-Services</h3>
+        <pre>
+          RUB IMS
+          VLE (Moodle)
+          Library (OPAC)
+          Zorig Melong Journal
+          Mail (Google Apps)
+          Downloads
+          Sitemap
+        </pre>
+      </div>
+
+      <div class="footer-section address">
+        <h3>Address</h3>
+        <pre>
+          College of Science and Technology,
+          Rinchending, Phuentsholing,
+          Chukkha: Bhutan,
+          Post-Box No: 450
+          Postal Code: 21101
+
+          Email: info.cst@rub.edu.bt
+          Web Manager: ictunit.cst@rub.edu.bt 
+        </pre>
+      </div>
+    </footer>
   </body>
 </html>
